# innotter

./: .gitignore  Dockerfile  Dockerfile-core  Dockerfile-microservice  docker-compose.yml  entrypoint-microservice.sh  entrypoint-web.sh  entrypoint-worker.sh  pyproject.toml
innotter/innotter/: my_celery.py
innotter/innotter/entities/: admin.py  apps.py  models.py  serializers.py  views.py
innotter/innotter/entities/migrations/: 0001_initial.py  0002_alter_post_reply_to.py  0003_alter_page_image.py  0004_post_reply_from.py  0005_remove_post_reply_from.py  0006_alter_page_follow_requests_alter_page_followers.py  0007_post_likes.py  0008_remove_post_likes_post_likes.py  0009_alter_post_likes.py  0010_alter_post_likes.py
innotter/innotter/innotter/: apps.py  jwt.py  permissions.py  settings.py  signals.py  urls.py
innotter/innotter/middleware/: authentication.py
innotter/innotter/services/: mail_service.py  statistics_service.py
innotter/innotter/tasks/: users_tasks.py
innotter/innotter/users/: models.py  serializers.py  views.py
innotter/innotter/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_remove_user_image_s3_path_user_image.py  0004_alter_user_title.py
innotter/microservice/: credentials.py  main.py
tests/: test_innoter.py
